💄 (UI) Re-fixed modal z-index layering

--- a/frontend/src/app/modal-container/modal-container.component.sass
+++ b/frontend/src/app/modal-container/modal-container.component.sass
@@ -9,6 +9,7 @@
     align-items: center
     justify-content: center
     background-color: #0000007d
+    z-index: 10
 
 .modal
     background-color: #ffffff
